--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>timer_OOP</title>
 </head>
 <body>
-<script src="main.js">
+  <div class="container">
+    
+  </div>
 
+<script src="main.js">
 </script>
 </body>
 </html>
