--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>timer_OOP</title>
 </head>
 <body>
-  <div class="container">
-    
+  <div id="container">
+
   </div>
 
 <script src="main.js">
